# Azure_OpenAI_samples

./: .gitignore  README.md  requirements.txt
.github/: copilot-instructions.md
AI Search Code Sample with AOAI/: .env.sample  AI Search Query Patterns.ipynb
AI Search with AOAI/: 1_AISearch-query-patterns.ipynb  1_AISearch_query_patterns.ipynb  2_AISearch-content-understanding.ipynb  3.1_AISearch-RAG-optimization-init.ipynb  3.2_AISearch-RAG-optimization-test.ipynb  README.md  main_prompt_plain.txt  requirements.txt  sample.env
Azure AI Evaluation SDK/: .env.sample  01.1_quality-evaluator.ipynb  01.2_batch-eval-with-your-data.ipynb  01.3_batch-eval-with-synthetic-data.ipynb  01.4_schedule-evaluation-with-tracing-data.ipynb  01.5_custom-evaluator.ipynb  01.6_batch-eval-with-custom_eval.ipynb  02.1_safety-evaluator.ipynb  03.1_adversarial-simulator.ipynb  1_quality-evaluators.ipynb  2_safety-evaluators.ipynb  3_context-simulator.ipynb  README.md  custom_temp_data.csv  eval_sim_test.jsonl  output.json  quality-evaluators.ipynb  requirements.txt  unfiltered_indirect_attack_outputs.jsonl
Azure AI Foundry Trace/: .env.sample  1_ai_foundry_trace.ipynb  requirements.txt
Azure Custom Speech/: .env.sample  0_text_data_generation.ipynb  0_text_data_generation_it.ipynb  1_audio_creation.ipynb  1_evaluate_transcribe_public_data.ipynb  1_synthetic_audio_creation.ipynb  1_synthetic_audio_creation_it.ipynb  1_text_data_generation.ipynb  1_text_data_generation_aoai.ipynb  2_custom_speech.ipynb  (+25 more)
GPT-5/: .env.sample  1_gpt-5-basic.ipynb  main.py  pyproject.toml  requirements.txt
(+113 files in other folders)
