[project]
name = "gpt-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==1.99.9",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "azure-keyvault-secrets==4.9.0",
    "gradio==5.10.0",
    "azure-identity==1.19.0",

]
